# CACR2023

./: Atest  Btest  Dockerfile  Makefile  README.md  libmosquitto.so.1  mosquitto  mosquitto.conf  test.cpp
auth/: auth-plug.c  be-mongo.c  log.c  pbkdf2-check.c
auth/contrib/python3/: destory.py  np.py  superuser_update.py  username  username.py
encrypt/: CMakeLists.txt  Makefile  graph.hpp  log.hpp  mosquitto_message_encrypt.cpp  test  test.cpp  test_A.cpp  test_B.cpp  util.hpp
encrypt/accidents/: accident_a87fd0eec32a4a60a07b0103247b6a45.dot
plugins/encrypt_message/: .gitignore  CMakeLists.txt  Makefile  database  database.c  encrypt_message.c  generate-data.py  graph.cpp  graph.hpp  mosquitto.conf  mosquitto_message_encrypt.c  mosquitto_message_encrypt.cpp  path-record.h  test  test.c  test.cpp  test.py  test_data  util.hpp
plugins/encrypt_message/test/: CMakeLists.txt  main.cpp  util.hpp
plugins/persistent-storage/: CMakeLists.txt  persistent-storage.c
src/: mosquitto.conf
test/: Benchmark_Database  Benchmark_Database.cpp  Benchmark_Decrypt.cpp  Decrypt.hpp  Test_Database  Test_Database.cpp  Test_Decrypt  Test_Decrypt.cpp  accident.py  mqtt-emulator.py  util.hpp
